# jffah

./: .gitignore  CMakeLists.txt  LICENSE  README.md  balance_merge.h  file_struct.h  natural_merge.h
examples/: CMakeLists.txt  sort_example.cpp  tree_example.cpp
headers/: balance_merge.h  ifile.h  natural_merge.h  ofile.h  poly_phase.h
include/jffah/sorts/: merge_sort.hpp
include/jffah/trees/: bst.hpp
merge_sorts/headers/: file_struct.h  ofile.h  poly_phase.h
merge_sorts/source/: balance_merge.cpp  ifile.cpp  natural_merge.cpp  ofile.cpp
source/: balance_merge.cpp  ifile.cpp  natural_merge.cpp  ofile.cpp  poly_phase.cpp
tests/: CMakeLists.txt  test_sorts.cpp  test_trees.cpp
trees/headers/: avl_tree.h  binary_node.h  binary_tree.h  crtp_avl_node.h  crtp_binary_node.h  crtp_search_binary_node.h  ideal_balance_tree.h  search_binary_tree.h
